k8s/app2-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: devops-app2-service
  namespace: devops
  labels:
    app: devops-app2
spec:
  type: ClusterIP
  selector:
    app: devops-app2
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
