k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: devops-info-service
  labels:
    app: devops-info-service
spec:
  type: NodePort
  selector:
    app: devops-info-service
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30080
