k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-info-ingress
  namespace: devops
  labels:
    app: devops-info-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - devops.local
    secretName: tls-secret
  rules:
  - host: devops.local
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: devops-info-service
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: devops-app2-service
            port:
              number: 80
